feat: improve cross-platform setup and gitignore
- Update .gitignore to exclude vcpkg, build artifacts, and .cursor cache
- Add setup-simple.sh for faster development setup using system packages
- Update CMakeLists.txt to support both vcpkg and system packages
- Add USE_SYSTEM_PACKAGES option for flexible dependency management
- Keep .cursor/rules/ but exclude cache and indexing files
- Remove partially created vcpkg directory

--- a/.gitignore
+++ b/.gitignore
@@ -97,7 +97,38 @@ coverage/
 # Package managers
 vcpkg_installed/
 packages/
+vcpkg/
+vcpkg-*.log
+
+# Build artifacts
+build-linux/
+build-windows/
+build/
+out/
+bin/
+lib/
+
+# Cross-compilation artifacts
+*.exe
+*.dll
+*.so
+*.dylib
+*.a
+*.lib
 
 # Documentation build
 docs/_build/
 docs/build/
+
+# IDE and editor files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Cursor AI files (keep rules but exclude cache/indexing)
+.cursor/
+!.cursor/rules/
+.cursor/cache/
+.cursor/index/
+.cursor/logs/
