feat: add proper .cursor/cursorignore for code indexing
- Create .cursor/cursorignore to exclude build artifacts from Cursor indexing
- Exclude vcpkg, build directories, binaries, and generated files
- Keep source code, documentation, and important config files indexed
- Update .gitignore to keep .cursor/cursorignore in version control
- Remove accidental .cursorignore from root directory

--- a/.gitignore
+++ b/.gitignore
@@ -126,9 +126,9 @@ docs/build/
 *.sublime-project
 *.sublime-workspace
 
-# Cursor AI files (keep rules but exclude cache/indexing)
-.cursor/
-!.cursor/rules/
+# Cursor AI files (keep rules and cursorignore but exclude cache/indexing)
 .cursor/cache/
 .cursor/index/
 .cursor/logs/
+!.cursor/rules/
+!.cursor/cursorignore
