feat: integrate TUIO11_CPP library as submodule
- Add TUIO11_CPP as git submodule in third_party/
- Create CMake interface for TUIO library with cross-platform support
- Exclude Windows-specific files when building on Linux
- Link TUIO library to main executable
- Successfully build and test with OpenCV and SDL2
- Ready for TUIO protocol implementation

--- a/.cursorignore
+++ b/.cursorignore
@@ -1,3 +1,4 @@
+# Add directories or file patterns to ignore during indexing (e.g. foo/ or *.csv)
 # Cursor AI Code Indexing Exclusions
 # This file tells Cursor which files to exclude from code indexing
 
