feat: implement CameraManager for webcam capture
- Create CameraManager class with thread-based frame capture
- Support configurable frame dimensions and device selection
- Implement callback-based frame processing interface
- Add comprehensive error handling and validation
- Test successful capture at 15 FPS with 1920x1080 resolution
- Ready for marker detection integration

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,10 +15,10 @@ else()
     set(SDL2_LIBS SDL2::SDL2)
 endif()
 
-# Source files (to be added as we develop)
+# Source files
 set(SOURCES
     main.cpp
-    # CameraManager.cpp
+    CameraManager.cpp
     # MarkerDetector.cpp
     # CodiceDecoder.cpp
     # TUIOBridge.cpp
