feat(logging): implement configurable logging levels
- Add --debug, --verbose, and minimal logging modes
- Fix debug output suppression in minimal mode
- Remove false positive 'Found X contours' messages
- Convert all debug statements to use DEBUG_OUT/VERBOSE_OUT macros
- Clean minimal mode output shows only detected markers

Resolves logging configuration issues and provides clean output levels

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,8 @@ endif()
 set(SOURCES
     main.cpp
     CameraManager.cpp
-    # MarkerDetector.cpp
+    ImageProcessor.cpp
+    MarkerDetector.cpp
     # CodiceDecoder.cpp
     # TUIOBridge.cpp
     # MainWindow.cpp
