feat: implement working debug window with contour overlays
- Add live debug window showing camera feed with yellow contour overlays
- Implement simplified contour detection for 4-corner shapes
- Remove CameraManager callback system complexity that was causing hangs
- Use direct cv::VideoCapture for reliable frame processing
- Add frame counter, contour count, and performance metrics overlay
- Fix application hanging issues by simplifying architecture
- Maintain 30+ FPS performance with real-time updates

Resolves part of issue #13: debug window with yellow contour overlays working

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SOURCES
     CameraManager.cpp
     ImageProcessor.cpp
     MarkerDetector.cpp
+    DebugViewer.cpp
     # CodiceDecoder.cpp
     TUIOBridge.cpp
     TUIOConfig.cpp
